@@ -1,5 +1,5 @@
 AC_INIT(opennap.h)
-AM_INIT_AUTOMAKE(opennap,0.09)
+AM_INIT_AUTOMAKE(opennap,0.10)
 AM_PROG_CC_STDC
 AC_C_BIGENDIAN
 
